Extended ItemDragBehavior to properly handle overlapping containers when using an OverlapPanel as ItemsPanel

--- a/Frei.Avalonia/Frei.Avalonia.csproj
+++ b/Frei.Avalonia/Frei.Avalonia.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.7" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.2.7.3" />
   </ItemGroup>
 
 </Project>
